# ai-cli

./: .gitignore  README.md  config.toml.example  install-venv.sh  install.sh  pyproject.toml
ai/: __init__.py  api.py  ask.py  chat.py  cli.py  config.py  search.py
