[project]
name = "ai-cli"
version = "0.1.0"
description = "CLI помощник для Arch Linux с ProxyAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.34.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "tomli>=2.0.0; python_version < '3.11',
]

[project.scripts]
ai = "ai.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
